--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html> 
-    <html lang="en"> 
+    <html lang="en"> n
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,8 @@
     </head>
   
     <body>
-      <h1>Steven</h1>
-      <h2><a href="https://github.com/StevenTraboulay">Github</a></h2>
+      <h1>undefined</h1>
+      <h2><a href="https://github.com/undefined">Github</a></h2>
     </body>
     </html>
     
